Agregado footer, submenu en nav y seccion de foro privado

--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,7 @@ nav{
     text-align: center;
 }
 nav ul{
-    font-size: 18px;
     display: inline-block;
-}
-nav ul li i{
-    font-size: 30px;
 }
 li{
     float: left;
@@ -28,6 +24,47 @@ li{
     padding-top: 5px;
     padding-left: 20px;
     padding-right: 20px;
+    position: relative;
+}
+nav a{
+	color: #FFFFFF;
+	display: block;
+	font: bold 12px/20px sans-serif;
+	text-align: center;
+	text-decoration: none;
+    -webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	transition: all .25s ease;
+}
+#submenu{
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 35px;
+    visibility: hidden;
+    z-index: 1;
+}
+li:hover ul#submenu{
+    opacity: 1;
+    top: 40px;
+    visibility: visible;
+}
+#submenu li{
+    float: none;
+    width: 100%;
+}
+#submenu a:hover{
+    background-color: rgb(0, 0, 0);
+}
+#submenu a{
+    background-color: #008ba2;
+    padding: 5px 5px;
+    margin: none;
+}
+nav i{
+    font-size: 25px;
 }
 section{
     padding: 0px 20px 10px 20px;
@@ -101,8 +138,12 @@ textarea{
     background-size: cover;
 }
 #descript h3{
-    padding-bottom: 10px;
+    border-bottom: 2px solid #001215;
+    padding-bottom: 5px;
     font-weight: 500;
+}
+#descript p{
+    padding-top: 5px;
 }
 #descript{
     padding-bottom: 10px;
@@ -190,8 +231,13 @@ textarea{
     margin-left: auto;
     margin-right: auto;
 }
-#tablamultim td h3{
-    margin-bottom: 20px;
+#tablamultim p{
+    padding-top: 5px;
+}
+
+#tablamultim h3{
+    padding-bottom: 5px;
+    border-bottom: 2px solid #001215;
     text-align: center;
 }
 #tablamultim td iframe{
@@ -201,8 +247,18 @@ textarea{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+#foro h3{
+    border-bottom: 2px solid #001215;
+}
 #foro h3, #foro p, #foro form{
-    padding-bottom: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+#foro .form h3{
+    border: none;
+}
+.priv{
+    border-top: 3px solid #001215;
 }
 #tareas{
     background-color: #85A0BD;
@@ -217,6 +273,34 @@ textarea{
     justify-content: space-between;
     align-content: space-around;
 }
-#tareas #gridtask #task h3{
-    padding-top: 10px;
+.task h3{
+    border-right: 2px solid #001215;
+    border-bottom: 2px solid #001215;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.task p{
+    border-right: 2px solid #001215;
+    padding-top: 5px;
+}
+.task{
+    margin-bottom: auto;
+    margin-top: auto;
+}
+.task form{
+    margin-top: 5px;
+}
+footer{
+    height: 40px;
+    padding-top: 5px;
+    text-align: center;
+}
+footer ul{
+    display: inline-block;
+}
+footer ul li{
+    float: left;
+}
+.foot{
+    padding-top: 15px;
 }
